--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Network visualization tool",
   "scripts": {
     "start": "watchify -v -t coffeeify src/netscope.coffee -o assets/js/netscope.js",
-    "test": "mocha --compilers coffee:coffee-script/register"
+    "test": "mocha --compilers coffee:coffee-script/register",
+    "lite": "lite-server --port 8080",
+    "debug": "npm run lite"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/ethereon/netscope#readme",
   "devDependencies": {
     "coffeeify": "^2.1.0",
-    "watchify": "^3.11.0"
+    "watchify": "^3.11.0",
+    "lite-server": "^1.3.1"
   }
 }
